deployment/envoy.yaml
static_resources:
 listeners:
 - address:
     socket_address:
       address: 0.0.0.0
       port_value: 80
   filter_chains:
   - filters:
     - name: envoy.http_connection_manager
       typed_config:
         "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
         codec_type: auto
         stat_prefix: ingress_http
         route_config:
           name: local_route
           virtual_hosts:
           - name: service
             domains:
             - "*"
             routes:
             - match:
                 prefix: "/labour"
               route:
                 cluster: local_service
         http_filters:
         - name: envoy.router
           typed_config: {}
 clusters:
 - name: local_service
   connect_timeout: 0.25s
   type: strict_dns
   lb_policy: round_robin
   load_assignment:
     cluster_name: local_service
     endpoints:
     - lb_endpoints:
       - endpoint:
           address:
             socket_address:
               address: 172.17.0.1
               port_value: 8080
admin:
 access_log_path: "/dev/null"
 address:
   socket_address:
     address: 0.0.0.0
     port_value: 8081
